--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
             <img class="about-image" src="http://via.placeholder.com/200" />
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dapibus mauris eu
-                nunc dictum, sit amet elementum turpis viverra. Morbi vel tristique sem. Vivamus jlvel finibus velit,
+                nunc dictum, sit amet elementum turpis viverra. Morbi vel tristique sem. Vivamus vel finibus velit,
                 sit amet dictum enim. Sed ac risus mi. Maecenas non lectus vitae magna laoreet pretium. Aenean leo
                 turpis, facilisis sed suscipit non, viverra non ex. Duis elementum lorem nulla, nec sollicitudin eros feugiat in.
                 In dignissim maximus nibh, eu faucibus nisl suscipit eget.
